# StockAlgo

./: .dockerignore  .gitignore  README.md  pyproject.toml  requirements.txt
DatabaseLogic/AlphaVantage/: GetData.py
DatabaseLogic/DatabaseFunc/: InsertData.py  MySqlDBConnection.py
dags/: stockalgo-apply-ddl.py  stockalgo_ingest.py
ddl/: stockTableCreation.sql
docker/: Dockerfile  requirements.txt
legacy/: AllTickers.csv  AwsSecrets.py  README.md  main.py
legacy/mysql_database/: DemoDb_ERD.drawio
mysql_database/: Demo_db_full_schema.sql
priv_alpha_vantage/: setup.py
pyspark/: alpaca-ingest.py  apply_ddl.py
src/stockalgo/: apply_ddl.py  connections.py  indicator_math.py  indicators.py  indicators_baseline.py  ingest.py  main.py  validate_bars.py
tests/: conftest.py  iceberg-smoke-test.py
tests/integration/: test_iceberg_smoke.py
tests/spark/: test_merge.py  test_validation.py
tests/unit/: test_indicator_math.py
yaml/: airflow-pvcs.yaml  airflow-pvs.yaml  airflow-spark-rbac.yaml  apply-ddl.yaml  custom-resources.yaml  dev-shell.yaml  fast-nfs-pv-sql0.yaml  fast-nfs-pv.yaml  fast-nfs-pvc.yaml  firstpod.yaml  infra-nfs-pv-sql1.yaml  infra-nfs-pvc.yaml  integration-test-job.yaml  minio-pv.yaml  minio-pvc.yaml  minio-values.yaml  mysql-configmap.yaml  mysql-np-service.yaml  mysql-services.yaml  mysql-statefulset.yaml  polaris-postgres-pv.yaml  polaris-values.yaml  pyspark-pi.yaml  stockalgo-apply-ddl.yaml  stockalgo-deployment.yaml  stockalgo-indicators.yaml  stockalgo-ingest.yaml  stockalgo-service.yaml
(+3 files in other folders)
